# cautious-fiesta-server

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt  protocole.md
assets/: .BOSS_100x100_DIAG_SSHEET.txt.swp  BARREL_50x50.txt  BOSS_100x100_DIAG_SSHEET.txt  ENNEMY1_34x34_DIAG_SSHEET.txt  PUDDLE_50x50.txt  WALL_HORIZONTAL_100x50.txt  WALL_VERTICAL_50x100.txt
assets/SpriteSheets/: HeartSpriteSheet.txt  Projectiles.txt
include/: Asset.hpp  GameRoom.hpp  Player.hpp  PlayerConnection.hpp  Protocole.hpp  Serializer.hpp  Server.hpp  Udp.h
include/common/: Player.hpp  PlayerConnection.hpp  Protocole.hpp  Serializer.hpp  Stats.hpp  Udp.h
include/ingame/: ColliderManager.hpp  CpnOnDestroy.hpp  CpnPrevPosition.hpp  CpnTimer.hpp  CpnWandering.hpp  EffectComponents.hpp  GameManager.hpp  GoBarrel.hpp  GoBoss.hpp  GoBullet.hpp  GoDagger.hpp  GoEnnemy.hpp  GoGun.hpp  GoMapGeneration.hpp  GoPlayer.hpp  GoPuddle.hpp  GoSpear.hpp  GoSword.hpp  GoUdp.hpp  GoWallHorizontal.hpp  GoWallVertical.hpp  IGoEntity.hpp  IGoObstacle.hpp  IGoProjectile.hpp  IGoWeapon.hpp  SpawnManager.hpp
include/tcp-server/: GameRoom.hpp  PlayerConnection.hpp  Server.hpp
src/: Asset.cpp  GameRoom.cpp  Player.cpp  PlayerConnection.cpp  Protocole.cpp  Serializer.cpp  Server.cpp  TcpHandlers.cpp  main.cpp  tcpHandlers.cpp
src/common/: Player.cpp  PlayerConnection.cpp  Protocole.cpp  Serializer.cpp  Stats.cpp
src/ingame/: ColliderManager.cpp  GameManager.cpp  GoBarrel.cpp  GoBoss.cpp  GoBullet.cpp  GoDagger.cpp  GoEnnemy.cpp  GoGun.cpp  GoMapGeneration.cpp  (+11 more)
tests/: Makefile  test
(+6 files in other folders)
